--- a/assets/css/formatter.css
+++ b/assets/css/formatter.css
@@ -80,6 +80,9 @@ ul {
 }
 
 @media (max-width: 576px) {
+    body {
+        overflow-x: hidden;
+    }
     .font_16 {
         font-size: 16px;
     }
@@ -111,6 +114,9 @@ ul {
 }
 
 @media (min-width: 1200px) {
+    body {
+        overflow-x: hidden;
+    }
     .m_s_qr {
         margin-left: 120px;
     }
