--- a/assets/css/formatter.css
+++ b/assets/css/formatter.css
@@ -5,6 +5,7 @@
 
 body {
     overflow-x: hidden;
+    max-width: 100%;
     background-color: gray;
 }
 
@@ -80,9 +81,6 @@ ul {
 }
 
 @media (max-width: 576px) {
-    body {
-        overflow-x: hidden;
-    }
     .font_16 {
         font-size: 16px;
     }
@@ -114,9 +112,6 @@ ul {
 }
 
 @media (min-width: 1200px) {
-    body {
-        overflow-x: hidden;
-    }
     .m_s_qr {
         margin-left: 120px;
     }
